--- a/Day12_Task/index.html
+++ b/Day12_Task/index.html
@@ -1,5 +1,8 @@
 <html>
- <a href=".survey_form.html">
+ <a href="./survey_form.html">
+   survey form
+  </a>
+  <a href="survey_form.html">
    survey form
   </a>
   </html>
