--- a/Day12_Task/index.html
+++ b/Day12_Task/index.html
@@ -2,7 +2,8 @@
  <a href="./survey_form.html">
    survey form
   </a>
-  <a href="survey_form.html">
-   survey form
+ <br>
+  <a href="event-update.html">
+   Event update
   </a>
   </html>
