--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 <body>
     <h1>Tasks</h1>
     <div>
+        <h2>Day 7 Task</h2>
+        <a href="Day7_Task/Asiacountries_filter.html">
+            Asia Countries filter
+        </a>
+        <br>
+    </div>
+    <div>
         <h2>Day 12 Task</h2>
         <a href="Day12_Task/survey_form.html">
             survey form
