--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
             Manipulation of DOM Form
         </a>
     </div>
+    <div>
+        <h2>Project</h2>
+        <a href="Project/index.html">
+            Calculator
+        </a>
+    </div>
 </body>
 
 </html>
