--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     </div>
     <div>
         <h2>Project</h2>
-        <a href="Project/index.html">
-            Calculator
+        <a href="Project/index1.html">
+            Books
         </a>
     </div>
 </body>
