--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
             Ice and Fire API
         </a>
     </div>
+    <div>
+        <h2>Callback</h2>
+        <a href="Day17_task/callback.html">
+            Callback program
+        </a>
+    </div>
 </body>
 
 </html>
